# arte-360-reportage

./: .gitignore  .kartographer.wikitext  .leaflet.html  360-grad-reportage.json  360-grad-reportage.wikitext  360-grad-reportage.yml  360-grad-reportage_fr.wikitext  360-grad-reportage_new.yml  360-grad-reportage_wiki-fr.wikitext  Makefile  README.md  arte-360-reportage.json  arte-360-reportage.py  arte-360-reportage.yml  arte-360-reportage_chatgpt.txt  arte-360-reportage_leaflet.html  arte-360-reportage_leaflet.json  arte-360-reportage_wiki-de.wikitext  arte-360-reportage_wiki-fr.wikitext  arte-360-reportage_wiki_de_DVD.wikitext  arte-360-reportage_wiki_kartographer.wikitext  arte_360_reportage.py  csv-to-json.py  database.yml  duplicates.yml  episodes.csv  episodes.json  extract-links.py  fernsehserien.de.xml  geo.json  geo.yaml  index.html  karte.html  leaflet.html  notes.md  pyproject.toml  rename-by-json.py  rename.py  script.py  script.sh  (+1 more)
scrapes/: fernsehserien.de.html  fernsehserien.de.xml
scripts/: _dvd.py  _episode.py  _lib.py  _season.py  _tvshow.py  _wiki.py  _youtube.py  convert-json-to-yml.py  convert-yml-to-json.py  csv-to-json.py  export-to-json.py  generate-readme.py  generate-wikitext-fr.py  generate-wikitext.py  merge-fernsehserien.de.py  merge-imdb.py  merge-youtube.py  reformat-yml.py  rename-by-json.py  rename.py  scrape.py  youtube.py
