[tool.poetry]
name = "arte-360-reportage"
version = "0.1.0"
description = "A collection of boilerplate files and templates for my Python projects."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.rst"
repository = "https://github.com/Josef-Friedrich/arte-360-reportage"
license = "MIT" # GPL-3.0-only LGPL-2.1-only
# https://pypi.org/classifiers/
classifiers = [
    "Private :: Do not Upload"
]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.0.2"

[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.11.1"
pytest = "^5.2"
mypy = "^0.961"
autopep8 = "^1.6.0"
readme-patcher = "^0.5.0"
# readme-patcher = { path = "../readme_patcher", develop = true }
tox = "^3.25.1"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=1.4.2"]
build-backend = "poetry.masonry.api"


[tool.poetry.scripts]
"arte-360-reportage.py" = "python_project_boilerplate:print_version"
