[tool.poetry]
name = "arte-360-reportage"
version = "0.1.0"
description = "Management script for data collection in various file format (JSON, YAML) of the German and French TV show “Arte 360°-Reportage”."
authors = ["Josef Friedrich <josef@friedrich.rocks>"]
readme = "README.md"
repository = "https://github.com/Josef-Friedrich/arte-360-reportage"
license = "MIT" # GPL-3.0-only LGPL-2.1-only
# https://pypi.org/classifiers/
classifiers = [
    "Private :: Do not Upload"
]

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.87.0"
google-api-python-client-stubs = "^1.17.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
termcolor = "^2.3.0"
pyyaml = "^6.0.1"
wikidata = "^0.7.0"


[build-system]
requires = ["poetry>=1.4.2"]
build-backend = "poetry.masonry.api"


[tool.poetry.scripts]
"arte-360-reportage.py" = "arte_360_reportage:main"
